# libgsdl

./: .gitignore  CMakeLists.txt  TODO  gsdl-1.0.pc.cmake
docs/reference/: libgsdl-docs.sgml  libgsdl-sections.txt
libgsdl/: parser.c  parser.h  syntax.c  syntax.h  tokenizer.c  tokenizer.h  types.c  types.h
test/: test-parser.c  test-tokenizer.c
